# fantastic-happiness

./: .gitignore  docker-compose.yml
apps/api/: .env.example  README.md  alembic.ini  pyproject.toml
apps/api/app/: alembic.ini  main.py  pyproject.toml
apps/api/app/alembic/: env.py
apps/api/app/alembic/versions/: 2909a6cad7ea_add_question_model.py  506187ac37bc_create_users_and_accounts.py  5a7e1576c016_add_refresh_token.py  5fd28203f818_add_question_model.py  722f7abd1b0e_add_answer_model.py  8c7f24f69511_add_tags_and_tag_questions.py  953a0e5449a8_add_tags_and_tag_questions.py  eadc9b2f4a1e_add_answer_timestamps.py
apps/api/app/api/v1/: router.py
apps/api/app/api/v1/endpoints/: accounts.py  answer.py  auth.py  health.py  question.py  users.py
apps/api/app/application/services/: account_service.py  answer_service.py  auth_service.py  question_service.py  refresh_token_service.py  user_service.py
apps/api/app/core/: config.py  oauth.py  security.py
apps/api/app/infrastructure/db/: base.py  session.py
apps/api/app/infrastructure/db/models/: __init__.py  account.py  answer.py  question.py  refresh_token.py  tag.py  tag_question.py  user.py
apps/api/app/schemas/: account.py  answer.py  auth.py  question.py  user.py
apps/api/app/tests/: conftest.py  test_accounts.py  test_answer_endpoint.py  test_answer_service.py  test_auth.py  test_users.py
docs/: ai-nlp-future-integrations.md  alembic-docker-migrations-qna.md  api.md  architecture.md  async-test-harness-fix.md  authentication-migration-plan.md  context.md  db-models-conversation-notes.md  (+13 more)
(+33 files in other folders)
